# back-end/src/routes/works.routes.js
@@ -1,12 +1,18 @@
 import { Router } from "express";
-import { createWork, getAllWorks, getWorkByDay, getWorkByMonth, updateWork } from "../controllers/work.controller.js";
+import {
+  createWork,
+  getAllWorks,
+  getWorkByDay,
+  getWorkByMonth,
+  updateWork,
+} from "../controllers/work.controller.js";
 import { connectDB } from "../configDB/connectDB.js";
+import { acessAuth } from "../middleware/acessAuth.js";
 
+export const workRouter = Router();
 
-export const workRouter = Router()
-
-workRouter.get('/work', connectDB ,getAllWorks )
-workRouter.get('/work/search', connectDB, getWorkByDay )
-workRouter.get('/work/search', connectDB, getWorkByMonth )
-workRouter.post('/work', connectDB, createWork )
-workRouter.put('/work/:id', connectDB, updateWork)
+workRouter.get("/work", acessAuth, connectDB, getAllWorks);
+workRouter.get("/work/search", acessAuth, connectDB, getWorkByDay);
+workRouter.get("/work/search", acessAuth, connectDB, getWorkByMonth);
+workRouter.post("/work", acessAuth, connectDB, createWork);
+workRouter.put("/work/:id", acessAuth, connectDB, updateWork);
