# back-end/swagger/swagger_output.json
@@ -33,6 +33,9 @@
           "200": {
             "description": "OK"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -74,6 +77,9 @@
           "400": {
             "description": "Bad Request"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "description": "Not Found"
           },
@@ -101,6 +107,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "404": {
             "description": "Not Found"
@@ -130,6 +139,9 @@
           "400": {
             "description": "Bad Request"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "description": "Not Found"
           },
@@ -149,6 +161,9 @@
           "200": {
             "description": "OK"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -162,6 +177,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
@@ -187,6 +205,9 @@
           "400": {
             "description": "Bad Request"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "description": "Not Found"
           },
@@ -214,6 +235,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "404": {
             "description": "Not Found"
@@ -243,6 +267,9 @@
           "400": {
             "description": "Bad Request"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "description": "Not Found"
           },
@@ -262,6 +289,9 @@
           "200": {
             "description": "OK"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -275,6 +305,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
@@ -300,6 +333,9 @@
           "400": {
             "description": "Bad Request"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "description": "Not Found"
           },
@@ -328,6 +364,9 @@
           "400": {
             "description": "Bad Request"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "description": "Not Found"
           },
@@ -355,6 +394,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "404": {
             "description": "Not Found"
@@ -444,6 +486,9 @@
           "200": {
             "description": "OK"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -464,10 +509,10 @@
                 "client": {
                   "example": "any"
                 },
-                "collaborator": {
+                "work": {
                   "example": "any"
                 },
-                "work": {
+                "collaborator": {
                   "example": "any"
                 },
                 "price": {
@@ -484,8 +529,17 @@
           }
         ],
         "responses": {
+          "200": {
+            "description": "OK"
+          },
           "201": {
             "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "404": {
             "description": "Not Found"
@@ -496,33 +550,7 @@
         }
       }
     },
-    "/work/day": {
-      "get": {
-        "tags": [
-          "Works"
-        ],
-        "description": "",
-        "parameters": [
-          {
-            "name": "date",
-            "in": "query",
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/work/month": {
+    "/work/search": {
       "get": {
         "tags": [
           "Works"
@@ -546,6 +574,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
@@ -591,6 +622,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
@@ -638,16 +672,13 @@
         "title": "Works",
         "required": [
           "client",
-          "collaborator",
           "work",
+          "collaborator",
           "price",
           "date"
         ],
         "properties": {
           "client": {
-            "type": "string"
-          },
-          "collaborator": {
             "type": "string"
           },
           "work": {
@@ -657,6 +688,9 @@
               "Paisagismo e jardinagem",
               "Pintura"
             ]
+          },
+          "collaborator": {
+            "type": "string"
           },
           "price": {
             "type": "number"
@@ -703,19 +737,8 @@
           "phone": {
             "type": "string"
           },
-          "address": {
-            "type": "object",
-            "properties": {
-              "street": {
-                "type": "string"
-              },
-              "city": {
-                "type": "string"
-              },
-              "eircode": {
-                "type": "string"
-              }
-            }
+          "eircode": {
+            "type": "string"
           },
           "typeOfWork": {
             "type": "string",
@@ -777,22 +800,16 @@
           "phone": {
             "type": "string"
           },
-          "address": {
-            "type": "object",
-            "properties": {
-              "street": {
-                "type": "string"
-              },
-              "city": {
-                "type": "string"
-              },
-              "eircode": {
-                "type": "string"
-              }
-            }
+          "eircode": {
+            "type": "string"
           },
           "work": {
-            "type": "string"
+            "type": "string",
+            "enum": [
+              "Serviço de limpeza",
+              "Paisagismo e jardinagem",
+              "Pintura"
+            ]
           },
           "equipment": {
             "type": "boolean"
